--- a/about-me.html
+++ b/about-me.html
@@ -61,12 +61,17 @@
     </div>
     <div class="row">
       <div class="col-lg-3">
-        <img class="travel" src="https://images.unsplash.com/photo-1511739001486-6bfe10ce785f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="travel" width="250px" height="300px" >
+        <img class="travel" src="IMG_0661.jpg" alt="travel" width="250px" height="300px" >
       </div>
       <div class="col-lg-9">
         <h3>About Me </h3> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque corporis quis sed, quod pariatur! Officia aut tempore repellendus, culpa inventore magnam accusamus nemo fugiat debitis voluptates ratione omnis, nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio velit autem consectetur odit dolorem numquam. Illum cum, minima laboriosam neque error consequatur ullam nam nostrum, dignissimos perferendis omnis recusandae?
-
+        <p> -Graduated from Blaine Senior High School in 2017
+            <br>
+            -Attended St.Catherine University and majored in Public Health Sciences
+            <br>
+            -During last year of university decided to gain coding skills and enrolled in a web development program 
+            <br>
+            -Attended the University of Minnesota Web Development Bootcamp 2020 to become a software engineer
         </p>
       </div>
     </div>
