--- a/contact.html
+++ b/contact.html
@@ -63,14 +63,14 @@
         <tr>
            <th>Phone</th>
            <td> 
-             <a href= "tel:+(612) 000-0000"> 612-000-0000</a>
+             <a href= "tel:+(612) 000-0000"> 612-978-7382</a>
             </td>
          </tr>
 
          <tr>
           <th> Email</th>
           <td> 
-            <a href="mailto:bootcamp@gmail.com">bootcamp@gmail.com</a>
+            <a href="mailto:bootcamp@gmail.com">salmoa98@gmail.com</a>
            </td>
          </tr>
         </table>
