--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,22 @@
         <h5 display-4> Previous Projects:
           <br>
           <br>
-         <a href="https://salmoahmed.github.io/Code-Refactor/" >https://salmoahmed.github.io/Code-Refactor/</a> 
+          <a href="https://github.com/JoeyAM8402B/partyPlanner">Karaoke App </a> 
+         <br>
+         <br>
+         <a href="https://github.com/sumerakhan16/honeyTalks"> honeyTalks (Korean Films & Dramas)</a>
+          <br>
+          <br>
+          <a href="https://github.com/salmoahmed/Note-Taker" >Note Taker</a> 
+          <br>
+          <br>
+          <a href="https://github.com/salmoahmed/Password-Generator" >Password Generator</a>
+          <br>
+          <br>
+          <a href="https://github.com/salmoahmed/Workout-Tracker" >Workout Tracker</a>
+          <br>
+          <br>
+          <a href="https://github.com/salmoahmed/PWA-Online-Offline-Budget-Tracker" >Budget Tracker</a>
         </h5>
       </div>
     </div>
